# eval-log-analyzer

./: .gitignore  AGENTS.md  LOG_ANA_DESIGN.md  LOG_ANA_REQUIREMENTS.md  LOG_ANA_USER.md  pyproject.toml
examples/: run_analysis.py  run_compare.py
src/eval_log_analyzer/: __init__.py  analyzer.py  loader.py  metrics.py  parser.py  render.py  static_template.py
tests/: test_analyzer.py  test_loader.py  test_metrics.py  test_parser.py  test_render.py
